# ws-storage-api

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
frontend/: README.md
frontend/src/: App.css  App.tsx
frontend/src/UserGenerator/: index.tsx  logic.ts
frontend/src/UserList/: index.tsx
src/: main.rs
