[package]
name = "ws-storage-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
futures-util = "0.3.21"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
unwrap_or = "1.0.0"
warp = "0.3"
